--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,15 +12,14 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Title<br></div>
-                <div class="intro-lead-in">Date</div>
-                <div class="intro-lead-in">Location</div>
-                <a href="#intro" class="page-scroll btn btn-xl">Tell Me More</a>
+                <div class="intro-heading">SinoUK AI Workshop 2022<br></div>
+                <div class="intro-lead-in">8th December 2022</div>
+                <div class="intro-lead-in">College Court, Leicester, UK</div>
+                <a href="#intro" class="page-scroll btn btn-xl">About</a>
             </div>
         </div>
     </header>
 
-    {% include 2017_data/intro.html %}
     {% include 2017_data/speakers.html %}
     {% include 2017_data/about.html %}
     {% include 2017_data/sponsors.html %}
