--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -19,13 +19,13 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../#speakers">Speakers</a>
+                        <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../#about">About</a>
+                        <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="../#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
             </div>
