--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -12,10 +12,10 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-heading">Leicester SinoUK AI Workshop 2022<br></div>
+                <div class="intro-heading">AIDAM Winter AI Workshop 2022<br></div>
                 <div class="intro-lead-in">8th December 2022</div>
                 <div class="intro-lead-in">College Court, Leicester, UK</div>
-                <a href="#intro" class="page-scroll btn btn-xl">About</a>
+                <a href="#about" class="page-scroll btn btn-xl">About</a>
             </div>
         </div>
     </header>
