--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -15,7 +15,7 @@
                 <div class="intro-heading">AIDAM Winter AI Workshop 2022<br></div>
                 <div class="intro-lead-in">8th December 2022</div>
                 <div class="intro-lead-in">College Court, Leicester, UK</div>
-                <a href="#about" class="page-scroll btn btn-xl">About</a>
+                <a href="#speakers" class="page-scroll btn btn-xl">Speakers</a>
             </div>
         </div>
     </header>
