--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -13,7 +13,9 @@
         <div class="container">
             <div class="intro-text">
                 <div class="intro-heading">AIDAM Winter AI Workshop 2022<br></div>
-                <div class="intro-lead-in">8th December 2022</div>
+                <br></br>
+                <br></br>
+                <div class="intro-lead-in">Friday, 9th December 2022</div>
                 <div class="intro-lead-in">College Court, Leicester, UK</div>
                 <a href="#speakers" class="page-scroll btn btn-xl">Speakers</a>
             </div>
