--- a/_includes/2016_data/contact.html
+++ b/_includes/2016_data/contact.html
@@ -2,14 +2,15 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Contact Us</h2>
-                <h3 class="section-subheading text-muted">We will do our best to answer your request as soon as possible. You may send us your request via <a href="https://www.facebook.com/">Facebook Message</a></h3>
+                <h2 class="section-heading">Call for Posters!</h2>
+                <h3 class="section-subheading text-muted">Call for Posters is open! For details please refer to <a href="https://bipl-uol.github.io/SinoUK2022/booklet">workshop booklet</a></h3>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12">
-                <form name="sentMessage" id="contactForm" action="https://formspree.io/hello.world@gmail.com" method="POST" novalidate>
-                    <div class="row">
+                <!--<form name="sentMessage" id="contactForm" action="https://formspree.io/hello.world@gmail.com" method="POST" novalidate>-->
+                    <form name="sentMessage" id="contactForm" action="https://formspree.io/f/mrgdovry" method="POST" novalidate>
+                        <div class="row">
                         <div class="col-md-6">
                             <div class="control-group form-group">
                                 <input type="text" class="form-control" name="name" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name."WW>
