--- a/_includes/2016_data/header.html
+++ b/_includes/2016_data/header.html
@@ -28,7 +28,7 @@
                         <a class="page-scroll" href="2016/#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="2016/#contact">Contact</a>
+                        <a class="page-scroll" href="2016/#contact">Call for Poster</a>
                     </li>
                 </ul>
             </div>
