--- a/_includes/2017_data/contact.html
+++ b/_includes/2017_data/contact.html
@@ -2,7 +2,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Call for Posters</h2>
+                    <h2 class="section-heading">Call for Posters!</h2>
                     <h3 class="section-subheading text-muted">Call for Posters is open! For details please refer to <a href="https://bipl-uol.github.io/SinoUK2022/booklet">workshop booklet</a></h3>
                 </div>
             </div>
