--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -25,7 +25,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                        <a class="page-scroll" href="#contact">Call for Poster</a>
                     </li>
                 </ul>
             </div>
