--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -19,6 +19,9 @@
                         <a href="/"></a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917">Registration</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
