--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -27,6 +27,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Call for Poster</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917">Registration</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
