--- a/_includes/2017_data/header-home.html
+++ b/_includes/2017_data/header-home.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="css/2017_style/img/logo-small-transparent.png" style="margin-top:-35px" width="300px" alt="icon-about"></a>
+                <a class="navbar-brand page-scroll" href="https://bipl-uol.github.io/SinoUK2022/"><img src="css/2017_style/img/logo-small-transparent.png" style="margin-top:-35px" width="300px" alt="icon-about"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,9 +19,6 @@
                         <a href="/"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917">Registration</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#speakers">Speakers</a>
                     </li>
                     <li>
@@ -29,6 +26,9 @@
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Call for Poster</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917">Registration</a>
                     </li>
                 </ul>
             </div>
