--- a/_includes/2017_data/header.html
+++ b/_includes/2017_data/header.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="/"><img src="css/2017_style/img/logo-small-transparent.png" style="margin-top:-35px" width="300px" alt="icon-about"></a>
+                <a class="navbar-brand page-scroll" href="https://bipl-uol.github.io/SinoUK2022/"><img src="css/2017_style/img/logo-small-transparent.png" style="margin-top:-35px" width="300px" alt="icon-about"></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
