--- a/_includes/2017_data/speakers.html
+++ b/_includes/2017_data/speakers.html
@@ -21,6 +21,7 @@
                     <div class="speakers-caption">
                         <h4>{{ post.title }}</h4>
                         <p class="text-muted">{{ post.subtitle }}</p>
+                        <p class="text-muted">{{ post.affilation }}</p>
                     </div>
                 </div>
             {% endfor %}
