--- a/_layouts/2017_home.html
+++ b/_layouts/2017_home.html
@@ -17,7 +17,7 @@
                 <br></br>
                 <div class="intro-lead-in">Friday, 9th December 2022</div>
                 <div class="intro-lead-in">College Court, Leicester, UK</div>
-                <a href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917" class="page-scroll btn btn-xl">Register Now</a> <a href="#speakers" class="page-scroll btn btn-xl">Speakers</a>
+                <a href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917" class="page-scroll btn btn-xl">Registration</a> <a href="#speakers" class="page-scroll btn btn-xl">Speakers</a>
             </div>
         </div>
     </header>
