--- a/_includes/2016_data/header-home.html
+++ b/_includes/2016_data/header-home.html
@@ -31,7 +31,7 @@
                         <a class="page-scroll" href="#contact">Call for Poster</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917">Registration</a>
+                        <a class="page-scroll" href="https://www.eventbrite.co.uk/e/university-of-leicester-aidam-winter-ai-workshop-2022-tickets-460714648917" target="_blank">Registration</a>
                     </li>
                 </ul>
             </div>
