--- a/_includes/2016_data/speakers_info.html
+++ b/_includes/2016_data/speakers_info.html
@@ -16,6 +16,7 @@
                                 <hr class="star-primary">
                                 <img src="css/2016_style/img/speaker/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                                 <h3>Topic: {{ post.topic }}</h3>
+                                <h4>Abstract: {{ post.abstract}}</h4>
                                 <p>{{ post.description }}</p>
                                 <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                             </div>
