--- a/_includes/2017_data/speakers_info.html
+++ b/_includes/2017_data/speakers_info.html
@@ -17,7 +17,7 @@
                             <img src="css/2017_style/img/speaker/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                             <h3>Topic: {{ post.topic }}</h3>
                             <p>Abstract: {{ post.abstract}}</p>
-                            <p>{{ post.description }}</p>
+                            <p>Bio: {{ post.description }}</p>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
