--- a/_includes/2016_data/contact.html
+++ b/_includes/2016_data/contact.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Call for Posters!</h2>
-                <h3 class="section-subheading text-muted">Call for Posters is open! For details please refer to <a href="https://bipl-uol.github.io/SinoUK2022/booklet">workshop booklet</a></h3>
+                <h3 class="section-subheading text-muted">Call for Posters is open! For details please refer to <a href="https://drive.google.com/file/d/1XiFmTdq8bpI_pOBr9L7qSK4l8SadYKk3/view">workshop booklet</a></h3>
             </div>
         </div>
         <div class="row">
